--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@sentry/nextjs": "^8.9.2",
     "@tanstack/react-table": "^8.17.0",
     "class-variance-authority": "^0.7.0",
@@ -30,7 +30,7 @@
     "fs": "^0.0.1-security",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.378.0",
-    "next": "^14.2.5",
+    "next": "14.2.3",
     "next-themes": "^0.3.0",
     "node-appwrite": "^12.0.1",
     "prettier": "^3.2.5",
@@ -38,12 +38,12 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.52.1",
-    "react-phone-number-input": "^3.4.5",
-    "tailwind-merge": "^2.4.0",
+    "react-hook-form": "^7.51.4",
+    "react-phone-number-input": "^3.4.1",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "twilio": "^5.0.4",
-    "zod": "^3.23.8"
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "@types/node": "^20",
